<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/ll_code_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#a0000000">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_left_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/rich_scan"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_torch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:text="@string/open_flashlight"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_capture_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_code_header"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:text="@string/capture_hint"
            android:textColor="@color/button_material_light"
            android:textSize="16sp" />

    </RelativeLayout>

    <com.hymane.materialhome.module.zxing.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />

</FrameLayout>
